--- a/content-org/content.org
+++ b/content-org/content.org
@@ -7,6 +7,103 @@
 :PROPERTIES:
 :EXPORT_HUGO_SECTION: post
 :END:
+** リポジトリのデプロイキーを使ってTravis CIからGitHubにプッシュする     :CI:
+:PROPERTIES:
+:EXPORT_FILE_NAME: 2019-03-02-push-to-github-from-travis-with-deploy-key
+:EXPORT_DATE: 2019-03-02
+:EXPORT_HUGO_LASTMOD:
+:END:
+
+CIで静的サイトを生成している場合、生成した静的サイトをリポジトリにコミット＆プッシュしたいことがよくあります。そのためにはCIからリポジトリへのプッシュ権限が必要になります。例えばTravis CIからGitHubにコミットをプッシュする場合は、GitHubのアクセストークンをHTTPSのBasic認証で送信するのがよくあるパターンです。
+
+
+{{{more}}}
+*** 鍵生成、登録
+
+- 鍵ペア生成
+- デプロイキー登録
+- 秘密鍵暗号化
+- 秘密鍵を使ってプッシュ
+
+ECDSA384ビットの鍵ペアを生成する。
+
+#+BEGIN_SRC console
+> ssh-keygen -t ecdsa -b 384 -C travis@travis-ci.org -f www_deploy_key_by_travis
+Generating public/private ecdsa key pair.
+Enter passphrase (empty for no passphrase):
+Enter same passphrase again:
+Your identification has been saved in www_deploy_key_by_travis.
+Your public key has been saved in www_deploy_key_by_travis.pub.
+The key fingerprint is:
+SHA256:JmxNDpRgGGaJYWUapfvBbnfyCpx4CCPsUOR/vGvAS8U travis@travis-ci.org
+The key's randomart image is:
++---[ECDSA 384]---+
+|.=BBo...         |
+|o=B. ..          |
+| oo  .. .        |
+|..o. oE=         |
+|=o +..* S        |
+|=.* *o +         |
+| + X =..         |
+|  o + =.         |
+|     oo.         |
++----[SHA256]-----+
+#+END_SRC
+
+秘密鍵 ~www_deploy_key_by_travis~ と公開鍵 ~www_deploy_key_by_travis.pub~ が生成される。公開鍵の内容をGitHubのリポジトリのDeploy Keyとしてコピペする。
+
+[[file:/images/writable_key_by_traviskeyboard.png]]
+
+~Title~ はわかりやすい適当な名前にする。これで公開鍵は用済みなので削除していい。
+
+次に ~travis encrypt-file~ コマンドで秘密鍵を暗号化する。下記ではDockerコンテナ内で実行する。
+
+#+begin_src console
+> docker run --rm -it -v %CD%:/mnt -w /mnt ruby bash
+# gem install travis
+# travis login --com
+Shell completion not installed. Would you like to install it now? |y| n
+We need your GitHub login to identify you.
+This information will not be sent to Travis CI, only to api.github.com.
+The password will not be displayed.
+
+Try running with --github-token or --auto if you don't want to enter your password anyway.
+
+Username: kai2nenobu
+Password for kai2nenobu: ************
+Successfully logged in as kai2nenobu!
+# travis encrypt-file --com www_deploy_key_by_travis
+encrypting www_deploy_key_by_travis for kai2nenobu/www
+storing result as www_deploy_key_by_travis.enc
+storing secure env variables for decryption
+
+Please add the following to your build script (before_install stage in your .travis.yml, for instance):
+
+    openssl aes-256-cbc -K $encrypted_c546895bd2a4_key -iv $encrypted_c546895bd2a4_iv -in www_deploy_key_by_travis.enc -out www_deploy_key_by_travis -d
+
+Pro Tip: You can add it automatically by running with --add.
+
+Make sure to add www_deploy_key_by_travis.enc to the git repository.
+Make sure not to add www_deploy_key_by_travis to the git repository.
+Commit all changes to your .travis.yml.
+# exit
+> rm www_deploy_key_by_travis
+> echo www_deploy_key_by_travis >> .gitignore
+> git add www_deploy_key_by_travis.enc .gitignore
+> git commit -m "暗号化した秘密鍵を追加する"
+#+end_src
+
+
+#+begin_src sh
+## pushにsshを使う
+$ git config url."git@github.com".pushInsteadOf "https://github.com/"
+$ export GIT_SSH_COMMAND="ssh -i file"
+$ openssl aes-256-cbc -K $encrypted_c546895bd2a4_key -iv $encrypted_c546895bd2a4_iv -in www_deploy_key_by_travis.enc -out www_deploy_key_by_travis -d
+#+end_src
+*** 参考URL
+- [[https://docs.travis-ci.com/user/encrypting-files/][Encrypting Files - Travis CI]]
+- [[https://efcl.info/2016/09/27/deploy-from-travis-ci-to-gh-pages/][Travis CIからgh-pagesへデプロイする設定 via SSH/git push | Web Scratch]]
+- [[https://discuss.bitrise.io/t/git-force-to-use-ssh-url-instead-of-https-for-github-com/4384][Git: force to use SSH URL instead of HTTPS for github.com]]
 ** Emacs Lispで「ソフトウェアエンジニアならば1時間（略）」を解いてみた 二番煎じ :Emacs:
 :PROPERTIES:
 :EXPORT_FILE_NAME: 2015-05-31-five-programming-problems-every-software-engineer-should-be-able-to-solve-in-less-than-1-hour
