--- a/content-org/content.org
+++ b/content-org/content.org
@@ -16,6 +16,7 @@
 
 CIで静的サイトを生成している場合、生成した静的サイトをリポジトリにコミット＆プッシュしたいことがよくあります。そのためにはCIからリポジトリへのプッシュ権限が必要になります。例えばTravis CIからGitHubにコミットをプッシュする場合は、GitHubのアクセストークンをHTTPSのBasic認証で送信するのがよくあるパターンです。
 
+wip
 
 {{{more}}}
 *** 鍵生成、登録
