--- a/content-org/content.org
+++ b/content-org/content.org
@@ -94,8 +94,9 @@ Commit all changes to your .travis.yml.
 > git commit -m "暗号化した秘密鍵を追加する"
 #+end_src
 
+GitHubにプッシュ。
 
-#+begin_src sh
+#+begin_src console
 ## pushにsshを使う
 $ git config url."git@github.com".pushInsteadOf "https://github.com/"
 $ export GIT_SSH_COMMAND="ssh -i file"
@@ -105,6 +106,7 @@ $ openssl aes-256-cbc -K $encrypted_c546895bd2a4_key -iv $encrypted_c546895bd2a4
 - [[https://docs.travis-ci.com/user/encrypting-files/][Encrypting Files - Travis CI]]
 - [[https://efcl.info/2016/09/27/deploy-from-travis-ci-to-gh-pages/][Travis CIからgh-pagesへデプロイする設定 via SSH/git push | Web Scratch]]
 - [[https://discuss.bitrise.io/t/git-force-to-use-ssh-url-instead-of-https-for-github-com/4384][Git: force to use SSH URL instead of HTTPS for github.com]]
+- [[https://shogo82148.github.io/blog/2018/04/10/migrate-to-hugo/][OctopressからHugoに乗り換えた]]
 ** Emacs Lispで「ソフトウェアエンジニアならば1時間（略）」を解いてみた 二番煎じ :Emacs:
 :PROPERTIES:
 :EXPORT_FILE_NAME: 2015-05-31-five-programming-problems-every-software-engineer-should-be-able-to-solve-in-less-than-1-hour
